--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.P12_MyDataBook">
-        <activity android:name=".AnniversaryActivity"></activity>
-        <activity android:name=".VaccinationActivity" />
-        <activity android:name=".BioActivity" />
+        <activity android:name=".AboutUsActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
